force-ide/objects/Dynamic_Image_Display__mdt.object
<CustomObject>
    <label>Dynamic Image Display</label>
    <pluralLabel>Dynamic Image Displays</pluralLabel>
    <fields>
        <fullName>ArchiveName__c</fullName>
        <description>Static Resource name that is a zip/archive. Empty means the image is directly stored in Static Resources.</description>
        <label>ArchiveName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageName__c</fullName>
        <description>Based on the Static Resource, direct is /image.png, inside an archive is combined with archivelocation + /image.png</description>
        <label>ImageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LayerName__c</fullName>
        <label>LayerName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>